--- a/src/Views/AssumeUnchangedManager.axaml
+++ b/src/Views/AssumeUnchangedManager.axaml
@@ -8,6 +8,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="SourceGit.Views.AssumeUnchangedManager"
         x:DataType="vm:AssumeUnchangedManager"
+        Icon="/App.ico"
         Title="{DynamicResource Text.AssumeUnchanged}"
         Background="{DynamicResource Brush.Window}"
         Width="600" Height="400"
