--- a/src/Views/Preference.axaml
+++ b/src/Views/Preference.axaml
@@ -2,6 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:m="using:SourceGit.Models"
         xmlns:c="using:SourceGit.Converters"
         xmlns:vm="using:SourceGit.ViewModels"
@@ -56,7 +57,7 @@
         <TabItem.Header>
           <TextBlock Classes="tab_header" Text="{DynamicResource Text.Preference.General}"/>
         </TabItem.Header>
-        <Grid Margin="8" RowDefinitions="32,32,32,32,Auto" ColumnDefinitions="Auto,*">
+        <Grid Margin="8" RowDefinitions="32,32,32,32,32,Auto" ColumnDefinitions="Auto,*">
           <TextBlock Grid.Row="0" Grid.Column="0"
                      Text="{DynamicResource Text.Preference.General.Locale}"
                      HorizontalAlignment="Right"
@@ -70,10 +71,25 @@
                     SelectedItem="{Binding Locale, Mode=TwoWay, Converter={x:Static c:StringConverters.ToLocale}}"/>
 
           <TextBlock Grid.Row="1" Grid.Column="0"
-                     Text="{DynamicResource Text.Preference.General.Theme}"
+                     Text="{DynamicResource Text.Preference.General.AvatarServer}"
                      HorizontalAlignment="Right"
                      Margin="0,0,16,0"/>
           <ComboBox Grid.Row="1" Grid.Column="1"
+                    MinHeight="28"
+                    Padding="8,0"
+                    HorizontalAlignment="Stretch"
+                    SelectedItem="{Binding AvatarServer, Mode=TwoWay}">
+            <ComboBox.Items>
+              <sys:String>https://www.gravatar.com/avatar/</sys:String>
+              <sys:String>https://cravatar.cn/avatar/</sys:String>
+            </ComboBox.Items>
+          </ComboBox>
+
+          <TextBlock Grid.Row="2" Grid.Column="0"
+                     Text="{DynamicResource Text.Preference.General.Theme}"
+                     HorizontalAlignment="Right"
+                     Margin="0,0,16,0"/>
+          <ComboBox Grid.Row="2" Grid.Column="1"
                     MinHeight="28"
                     Padding="8,0"
                     HorizontalAlignment="Stretch"
@@ -86,11 +102,11 @@
             </ComboBox.Items>
           </ComboBox>
 
-          <TextBlock Grid.Row="2" Grid.Column="0"
+          <TextBlock Grid.Row="3" Grid.Column="0"
                      Text="{DynamicResource Text.Preference.General.MaxHistoryCommits}"
                      HorizontalAlignment="Right"
                      Margin="0,0,16,0"/>
-          <Grid Grid.Row="2" Grid.Column="1" ColumnDefinitions="*,64">
+          <Grid Grid.Row="3" Grid.Column="1" ColumnDefinitions="*,64">
             <Slider Grid.Column="0"
                     Minimum="20000" Maximum="100000"
                     TickPlacement="BottomRight" TickFrequency="5000"
@@ -114,11 +130,11 @@
                        Text="{Binding MaxHistoryCommits}"/>
           </Grid>
 
-          <CheckBox Grid.Row="3" Grid.Column="1"
+          <CheckBox Grid.Row="4" Grid.Column="1"
                     Content="{DynamicResource Text.Preference.General.RestoreTabs}"
                     IsChecked="{Binding RestoreTabs, Mode=TwoWay}"/>
 
-          <CheckBox Grid.Row="4" Grid.Column="1"
+          <CheckBox Grid.Row="5" Grid.Column="1"
                     Height="32"
                     Content="{DynamicResource Text.Preference.General.UseMacOSStyle}"
                     IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=UseMacOSStyle, Mode=TwoWay}"
